# libyuv_demo

./: README.md  build.gradle  settings.gradle
app/: build.gradle  download_model.gradle
app/src/androidTest/java/com/example/androidh264codecproject/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  YuvConvert.h  YuvJni.cpp  YuvJni.h
app/src/main/java/com/example/androidh264codecproject/: CameraActivity.java  CameraConnectionFragment.java  DetectorActivity.java  ImageClassifier.kt  ImageClassifierFloatInception.kt  LegacyCameraConnectionFragment.java  MainActivity.java  YuvUtil.java
app/src/main/java/com/example/androidh264codecproject/customview/: AutoFitTextureView.java  OverlayView.java  RecognitionScoreView.java  ResultsView.java
app/src/main/java/com/example/androidh264codecproject/decoder/: FFmpegAVCDecoder.java  FFmpegAVCDecoderCallback.java
app/src/main/java/com/example/androidh264codecproject/encoder/: AVCEncoder.java
app/src/main/java/com/example/androidh264codecproject/env/: BorderedText.java  ImageUtils.java  Logger.java  Size.java
app/src/main/java/com/example/androidh264codecproject/tflite/: Classifier.java  TFLiteObjectDetectionAPIModel.java
app/src/main/java/com/example/androidh264codecproject/tracking/: MultiBoxTracker.java
app/src/main/res/layout/: activity_camera.xml  camera_connection_fragment.xml  camera_connection_fragment_tracking.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
